[gd_scene load_steps=2 format=3 uid="uid://bs5a53lpxle5o"]

[ext_resource type="Script" uid="uid://dnqb854hy7ipo" path="res://menu/rank_item.gd" id="1_akarl"]

[node name="RankItem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_akarl")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RankLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RoundTimeLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Role" type="Control" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RoleTexture" type="TextureRect" parent="HBoxContainer/Role"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DifficultyLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RecordTimeLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
